A bit of restructuring, will need alot more work

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Taskman",
+  "name": "Work Tmer",
   "version": "1.0",
   "description": "Remember the work timer",
   "background": { 
