Timer now respecting onload, need to rebind events

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "cookies",
     "tabs",
     "http://*/",
-    "https://*/"
+    "https://*/",
+    "storage"
   ],
   
   "browser_action": {
